# Copyro

./: Cargo.toml  README.md
src/: main.rs  trollages.rs  windows.rs
