[package]
name = "copyro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winreg = "0.11.0"
bsod = "0.1.1"
winit = "0.28.1"
rand = "0.8.4"
msgbox = "0.7.0"

[dependencies.winapi]
version = "0.3.9"
features = ["handleapi", "processthreadsapi", "winnt", "securitybaseapi", "impl-default", "winuser"]
